--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sequelize": "^6.28.0",
+    "tedious": "^15.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
