--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.28.0",
-    "tedious": "^15.1.2"
+    "tedious": "^15.1.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
